--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alga</title>
 </head>
 <body>
     <h1>Algoritmusok és adatszerkezetek feladatok</h1>
@@ -11,7 +11,7 @@
     <h2>Neptun kód: S3K1DR</h2>
 
     <ul>
-        <li><a href=""> 1. feladat | Keresés és rendezés | CSES - Subarray Distinct Values </a></li>
+        <li><a href="https://github.com/gretapapp/Algoritmusok_es_adatszerkezetek_feladatok/tree/main/01_Kereses_es_rendezes"> 1. feladat | Keresés és rendezés | CSES - Subarray Distinct Values </a></li>
     
         <li><a href=""> 2. feladat | Rekurzióval megoldható feladatok |  </a></li>
     
