--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
         <li><a href="https://github.com/gretapapp/Algoritmusok_es_adatszerkezetek_feladatok/tree/main/04_Fak_Grafok"> 4. feladat | Fák, Gráfok | CSES - Road Construction </a></li>
     
-        <li><a href="https://github.com/gretapapp/Algoritmusok_es_adatszerkezetek_feladatok/tree/main/05_Kollokvium_feladat"> Kollikvium feladat | SPOJ/OKTV feladat | SPOJ - HORRIBLE - Horrible Queries <a href="https://www.spoj.com/problems/HORRIBLE/"> </a></li>
+        <li><a href="https://github.com/gretapapp/Algoritmusok_es_adatszerkezetek_feladatok/tree/main/05_Kollokvium_feladat"> Kollikvium feladat | SPOJ/OKTV feladat | SPOJ - HORRIBLE - Horrible Queries </a></li>
     </ul>
 </body>
 </html>
